@@ -1,5 +1,7 @@
 Changes since CPAchecker 1.1
 ----------------------------
+* r6066: The option analysis.traversal.useTopsort (used in most configuration files)
+  was renamed to analysis.traversal.useReversePostorder as this name is more precise.
 * r6060: SMTInterpol, an SMT solver written in Java, is now integrated into CPAchecker.
   With this solver, predicate analysis works on all platforms.
   Some configuration options were renamed in order to not be MathSAT-specific.
